--- a/spin.html
+++ b/spin.html
@@ -20,7 +20,7 @@
             <div id="inputList"></div>
             <input type="text" id="newInput" placeholder="Enter option">
             <button onclick="addInput()">Add</button>
-            <button onclick="spinWheel()">Spin</button>
+            <button onclick="spinWheel() id="spinButton">Spin</button>
         </div>
     </div>
     <div id="winnerModal" class="modal">
